--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Барбершоп</title>
   </head>
   <body>
+    <!-- HEADER -->
     <header>
       <nav>
         <a href="">
@@ -15,16 +16,16 @@
         </a>
         <ul>
           <li>
-            <a href="">О нас</a>
+            <a href="#about">О нас</a>
           </li>
           <li>
-            <a href="">Услуги и цены</a>
+            <a href="#services">Услуги и цены</a>
           </li>
           <li>
-            <a href="">Мастера</a>
+            <a href="#employees">Мастера</a>
           </li>
           <li>
-            <a href="">Контакты</a>
+            <a href="#contacts">Контакты</a>
           </li>
         </ul>
       </nav>
@@ -32,6 +33,7 @@
       <button type="button">онлайн-запись</button>
     </header>
     <main>
+      <!-- HERO -->
       <section>
         <div>
           <ul>
@@ -49,7 +51,43 @@
           <p>Мы эксперты в модных мужских стрижках. Работаем быстро, осторожно и со вкусом.</p>
         </div>
       </section>
-      <section>
+      <!-- ABOUT -->
+      <section id="about">
+        <div>
+          <ul>
+            <li>
+              <img
+                src="./images/about/about-img-1.jpg"
+                alt="мастер бреет бороду клиенту"
+                width="270"
+                height="445"
+              />
+            </li>
+            <li>
+              <img
+                src="./images/about/about-img-2.jpg"
+                alt="мастер стрижет клиента"
+                width="270"
+                height="445"
+              />
+            </li>
+          </ul>
+        </div>
+        <div>
+          <h2>О НАС</h2>
+          <h3>Лучший Барбершоп твоего города</h3>
+          <p>Если ты хочешь добавить в свой образ больше уверенности – тебе точно к нам.</p>
+          <p>
+            Мы команда, которая никогда не останавливается на достигнутом и жаждет перемен. И когда
+            ты попадешь в руки нашего мастера, то уже никогда не сможешь быть прежним. Мы команда,
+            которая всегда с клиентами "на одной волне". Поэтому, мы всегда готовы усовершенствовать
+            каждого, кто к нам приходит!
+          </p>
+          <button type="button">онлайн-запись</button>
+        </div>
+      </section>
+      <!-- SERVICES -->
+      <section id="services">
         <p>Проведи время в компании лучших мастеров</p>
         <h2>Услуги и цены</h2>
         <table>
@@ -90,7 +128,39 @@
         </table>
         <button type="button">онлайн-запись</button>
       </section>
+      <!-- ADVANTAGES -->
       <section>
+        <div>
+          <ul>
+            <li>
+              <p>600</p>
+              <p>Довольных клиентов в день</p>
+            </li>
+            <li>
+              <p>50</p>
+              <p>Наград за отличный сервис</p>
+            </li>
+            <li>
+              <p>20</p>
+              <p>Лучших мастеров Киева</p>
+            </li>
+            <li>
+              <p>100</p>
+              <p>Подарков постоянным клиентам</p>
+            </li>
+          </ul>
+        </div>
+        <div>
+          <p>старая традиционная школа</p>
+          <h2>Почему приходят именно к нам?</h2>
+          <p>
+            О нас говорят только хорошее. Но лучше 1 раз увидеть и прочувtствовать, чем 10 раз
+            прочитать.
+          </p>
+        </div>
+      </section>
+      <!-- EMPLOYEES -->
+      <section id="employees">
         <p>для настоящих ценителей атмосферы</p>
         <h2>Наши мастера</h2>
         <ul>
@@ -126,30 +196,87 @@
           </li>
         </ul>
       </section>
+      <!-- GALLERY -->
       <section>
-        <h2>Контакты</h2>
-        <address>
-          <ul>
-            <li>
-              <a
-                href="https://goo.gl/maps/LRW6XYM6qvwiERGNA"
-                target="_blank"
-                rel="noopener noreferrer"
-                >ул. Васильковая, 7А Киев, 08132</a
-              >
-            </li>
-            <li>
-              <a href="tel:+380441111111">+38 044 111 11 11</a>
-            </li>
-            <li>
-              <a href="mailto:barbershop@email.com">barbershop@email.com</a>
-            </li>
-          </ul>
-        </address>
-        <h3>время работы</h3>
-        <p>Ежедневно с 9:00 до 22:00</p>
+        <h2 hidden>Галерея работ</h2>
+        <p>На латинском языке “барба” означает “борода”</p>
+        <ul>
+          <li>
+            <img
+              src="./images/gallery/gallery-img-1.jpg"
+              alt="мастер стрижет клиента"
+              width="270"
+              height="360"
+            />
+          </li>
+          <li>
+            <img
+              src="./images/gallery/gallery-img-2.jpg"
+              alt="мастер бреет бороду клиенту"
+              width="270"
+              height="360"
+            />
+          </li>
+          <li>
+            <img
+              src="./images/gallery/gallery-img-3.jpg"
+              alt="мастер бреет бороду клиенту"
+              width="270"
+              height="360"
+            />
+          </li>
+          <li>
+            <img
+              src="./images/gallery/gallery-img-4.jpg"
+              alt="мастер стрижет клиента"
+              width="270"
+              height="360"
+            />
+          </li>
+        </ul>
       </section>
+      <div id="contacts">
+        <!-- CONTACT FORM -->
+        <section>
+          <h2>Онлайн-запись</h2>
+        </section>
+        <!-- CONTACT INFORMATION -->
+        <section>
+          <h2>Контакты</h2>
+          <address>
+            <ul>
+              <li>
+                <a
+                  href="https://goo.gl/maps/LRW6XYM6qvwiERGNA"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  >ул. Васильковая, 7А Киев, 08132</a
+                >
+              </li>
+              <li>
+                <a href="tel:+380441111111">+38 044 111 11 11</a>
+              </li>
+              <li>
+                <a href="mailto:barbershop@email.com">barbershop@email.com</a>
+              </li>
+            </ul>
+          </address>
+          <h3>время работы</h3>
+          <p>Ежедневно с 9:00 до 22:00</p>
+        </section>
+      </div>
     </main>
-    <footer></footer>
+    <!-- FOOTER -->
+    <footer>
+      <p>&copy; Copyright 2020</p>
+      <ul>
+        <li>
+          <a href="" lang="en">Instagram</a>
+        </li>
+        <li>
+          <a href="" lang="en">Youtube</a>
+        </li>
+      </ul>
+    </footer>
   </body>
 </html>
