--- a/index.html
+++ b/index.html
@@ -6,49 +6,58 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Барбершоп</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&family=Raleway:wght@700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <!-- HEADER -->
-    <header>
-      <nav>
-        <a href="">
-          <img src="./images/logo.svg" alt="логотип" width="69" height="55" />
+    <header class="page-header">
+      <nav class="page-nav">
+        <a class="logo" href="">
+          <img class="logo-img" src="./images/logo.svg" alt="логотип" width="69" height="55" />
         </a>
-        <ul>
-          <li>
-            <a href="#about">О нас</a>
+        <ul class="menu list">
+          <li class="menu-item">
+            <a class="menu-link link" href="#about">О нас</a>
           </li>
-          <li>
-            <a href="#services">Услуги и цены</a>
+          <li class="menu-item">
+            <a class="menu-link link" href="#services">Услуги и цены</a>
           </li>
-          <li>
-            <a href="#employees">Мастера</a>
+          <li class="menu-item">
+            <a class="menu-link link" href="#employees">Мастера</a>
           </li>
-          <li>
-            <a href="#contacts">Контакты</a>
+          <li class="menu-item">
+            <a class="menu-link link" href="#contacts">Контакты</a>
           </li>
         </ul>
       </nav>
-      <a href="tel:+380441111111">+38 044 111 11 11</a>
-      <button type="button">онлайн-запись</button>
+      <a class="contact-phone-number link" href="tel:+380441111111">+38 044 111 11 11</a>
+      <button class="modal-btn" type="button">онлайн-запись</button>
     </header>
     <main>
       <!-- HERO -->
-      <section>
-        <div>
-          <ul>
-            <li>
-              <a href="" lang="en">Instagram</a>
+      <section class="hero">
+        <div class="hero-left-side">
+          <ul class="media-list list">
+            <li class="media-list-item">
+              <a class="media-list-link link" href="" lang="en">Instagram</a>
             </li>
-            <li>
-              <a href="" lang="en">Youtube</a>
+            <li class="media-list-item">
+              <a class="media-list-link link" href="" lang="en">Youtube</a>
             </li>
           </ul>
         </div>
-        <div>
-          <p lang="en">A hair salon for men in Kyiv</p>
-          <h1 lang="en">BarberShop</h1>
-          <p>Мы эксперты в модных мужских стрижках. Работаем быстро, осторожно и со вкусом.</p>
+        <div class="hero-right-side">
+          <p class="suptitle suptitle-theme-dark" lang="en">A hair salon for men in Kyiv</p>
+          <h1 class="main-title" lang="en">BarberShop</h1>
+          <p class="section-description">
+            Мы эксперты в модных мужских стрижках. Работаем быстро, осторожно и со вкусом.
+          </p>
         </div>
       </section>
       <!-- ABOUT -->
@@ -74,7 +83,7 @@
           </ul>
         </div>
         <div>
-          <h2>О НАС</h2>
+          <h2 class="suptitle suptitle-theme-light">О НАС</h2>
           <h3>Лучший Барбершоп твоего города</h3>
           <p>Если ты хочешь добавить в свой образ больше уверенности – тебе точно к нам.</p>
           <p>
@@ -88,7 +97,7 @@
       </section>
       <!-- SERVICES -->
       <section id="services">
-        <p>Проведи время в компании лучших мастеров</p>
+        <p class="suptitle">Проведи время в компании лучших мастеров</p>
         <h2>Услуги и цены</h2>
         <table>
           <tr>
@@ -151,7 +160,7 @@
           </ul>
         </div>
         <div>
-          <p>старая традиционная школа</p>
+          <p class="suptitle">старая традиционная школа</p>
           <h2>Почему приходят именно к нам?</h2>
           <p>
             О нас говорят только хорошее. Но лучше 1 раз увидеть и прочувtствовать, чем 10 раз
@@ -269,12 +278,12 @@
     <!-- FOOTER -->
     <footer>
       <p>&copy; Copyright 2020</p>
-      <ul>
-        <li>
-          <a href="" lang="en">Instagram</a>
+      <ul class="media-list">
+        <li class="media-list-item">
+          <a class="media-list-link" href="" lang="en">Instagram</a>
         </li>
-        <li>
-          <a href="" lang="en">Youtube</a>
+        <li class="media-list-item">
+          <a class="media-list-link" href="" lang="en">Youtube</a>
         </li>
       </ul>
     </footer>
