--- a/index.html
+++ b/index.html
@@ -55,187 +55,198 @@
         <div class="hero-right-side">
           <p class="suptitle suptitle-theme-dark" lang="en">A hair salon for men in Kyiv</p>
           <h1 class="main-title" lang="en">BarberShop</h1>
-          <p class="section-description">
+          <p class="section-description section-description-theme-dark">
             Мы эксперты в модных мужских стрижках. Работаем быстро, осторожно и со вкусом.
           </p>
         </div>
       </section>
       <!-- ABOUT -->
-      <section id="about">
-        <div>
-          <ul>
-            <li>
+      <section class="about" id="about">
+        <div class="about-left-side">
+          <ul class="about-gallery list">
+            <li class="about-gallery-item">
               <img
+                class="about-gallery-img"
                 src="./images/about/about-img-1.jpg"
-                alt="мастер бреет бороду клиенту"
+                alt="мастер бреет бороду"
                 width="270"
                 height="445"
               />
             </li>
-            <li>
+            <li class="about-gallery-item">
               <img
+                class="about-gallery-img"
                 src="./images/about/about-img-2.jpg"
-                alt="мастер стрижет клиента"
+                alt="мастер стрижет"
                 width="270"
                 height="445"
               />
             </li>
           </ul>
         </div>
-        <div>
+        <div class="about-right-side">
           <h2 class="suptitle suptitle-theme-light">О НАС</h2>
-          <h3>Лучший Барбершоп твоего города</h3>
-          <p>Если ты хочешь добавить в свой образ больше уверенности – тебе точно к нам.</p>
-          <p>
+          <h3 class="title title-theme-light">Лучший Барбершоп твоего города</h3>
+          <p class="section-description section-description-theme-light">
+            Если ты хочешь добавить в свой образ больше уверенности – тебе точно к нам.
+          </p>
+          <p class="about-text">
             Мы команда, которая никогда не останавливается на достигнутом и жаждет перемен. И когда
             ты попадешь в руки нашего мастера, то уже никогда не сможешь быть прежним. Мы команда,
             которая всегда с клиентами "на одной волне". Поэтому, мы всегда готовы усовершенствовать
             каждого, кто к нам приходит!
           </p>
-          <button type="button">онлайн-запись</button>
+          <button class="modal-btn" type="button">онлайн-запись</button>
         </div>
       </section>
       <!-- SERVICES -->
-      <section id="services">
-        <p class="suptitle">Проведи время в компании лучших мастеров</p>
-        <h2>Услуги и цены</h2>
-        <table>
-          <tr>
-            <td>Мужская стрижка</td>
-            <td>от 300 грн.</td>
+      <section class="services" id="services">
+        <p class="suptitle suptitle-theme-dark">Проведи время в компании лучших мастеров</p>
+        <h2 class="title">Услуги и цены</h2>
+        <table class="services-table list">
+          <tr class="services-table-row">
+            <td class="services-table-name">Мужская стрижка</td>
+            <td class="services-table-price">от 300 грн.</td>
           </tr>
-          <tr>
-            <td>Стрижка бороды</td>
-            <td>от 200 грн.</td>
+          <tr class="services-table-row">
+            <td class="services-table-name">Стрижка бороды</td>
+            <td class="services-table-price">от 200 грн.</td>
           </tr>
-          <tr>
-            <td>Стрижка усов</td>
-            <td>от 200 грн.</td>
+          <tr class="services-table-row">
+            <td class="services-table-name">Стрижка усов</td>
+            <td class="services-table-price">от 200 грн.</td>
           </tr>
-          <tr>
-            <td>Бритье опасной бритвой</td>
-            <td>от 200 грн.</td>
-          </tr>
-        </table>
-        <table>
-          <tr>
-            <td>Cтрижка у стажера</td>
-            <td>от 50 грн.</td>
-          </tr>
-          <tr>
-            <td>Стрижка под насадку</td>
-            <td>от 200 грн.</td>
-          </tr>
-          <tr>
-            <td>Детская стрижка (до 12 лет)</td>
-            <td>от 300 грн.</td>
-          </tr>
-          <tr>
-            <td>Камуфлирование седины</td>
-            <td>от 200 грн.</td>
+          <tr class="services-table-row">
+            <td class="services-table-name">Бритье опасной бритвой</td>
+            <td class="services-table-price">от 200 грн.</td>
           </tr>
         </table>
-        <button type="button">онлайн-запись</button>
+        <table class="services-table list">
+          <tr class="services-table-row">
+            <td class="services-table-name">Cтрижка у стажера</td>
+            <td class="services-table-price">от 50 грн.</td>
+          </tr>
+          <tr class="services-table-row">
+            <td class="services-table-name">Стрижка под насадку</td>
+            <td class="services-table-price">от 200 грн.</td>
+          </tr>
+          <tr class="services-table-row">
+            <td class="services-table-name">Детская стрижка (до 12 лет)</td>
+            <td class="services-table-price">от 300 грн.</td>
+          </tr>
+          <tr class="services-table-row">
+            <td class="services-table-name">Камуфлирование седины</td>
+            <td class="services-table-price">от 200 грн.</td>
+          </tr>
+        </table>
+        <button class="modal-btn" type="button">онлайн-запись</button>
       </section>
       <!-- ADVANTAGES -->
-      <section>
-        <div>
-          <ul>
-            <li>
-              <p>600</p>
-              <p>Довольных клиентов в день</p>
+      <section class="advantages">
+        <div class="advantages-left-side">
+          <ul class="advantages-list list">
+            <li class="advantages-list-item">
+              <p class="advantages-list-quantity">600</p>
+              <p class="advantages-list-description">Довольных клиентов в день</p>
             </li>
-            <li>
-              <p>50</p>
-              <p>Наград за отличный сервис</p>
+            <li class="advantages-list-item">
+              <p class="advantages-list-quantity">50</p>
+              <p class="advantages-list-description">Наград за отличный сервис</p>
             </li>
-            <li>
-              <p>20</p>
-              <p>Лучших мастеров Киева</p>
+            <li class="advantages-list-item">
+              <p class="advantages-list-quantity">20</p>
+              <p class="advantages-list-description">Лучших мастеров Киева</p>
             </li>
-            <li>
-              <p>100</p>
-              <p>Подарков постоянным клиентам</p>
+            <li class="advantages-list-item">
+              <p class="advantages-list-quantity">100</p>
+              <p class="advantages-list-description">Подарков постоянным клиентам</p>
             </li>
           </ul>
         </div>
-        <div>
-          <p class="suptitle">старая традиционная школа</p>
-          <h2>Почему приходят именно к нам?</h2>
-          <p>
-            О нас говорят только хорошее. Но лучше 1 раз увидеть и прочувtствовать, чем 10 раз
+        <div class="advantages-right-side">
+          <p class="suptitle suptitle-theme-light">старая традиционная школа</p>
+          <h2 class="title title-theme-light">Почему приходят именно к нам?</h2>
+          <p class="section-description section-description-theme-light">
+            О нас говорят только хорошее. Но лучше 1 раз увидеть и прочувствовать, чем 10 раз
             прочитать.
           </p>
         </div>
       </section>
       <!-- EMPLOYEES -->
-      <section id="employees">
-        <p>для настоящих ценителей атмосферы</p>
-        <h2>Наши мастера</h2>
-        <ul>
-          <li>
+      <section class="employees-section" id="our-team">
+        <p class="suptitle suptitle-theme-light">для настоящих ценителей атмосферы</p>
+        <h2 class="title title-theme-light">Наши мастера</h2>
+        <ul class="employees list">
+          <li class="employees-card">
             <img
+              class="employees-photo"
               src="./images/employees/john-smith.jpg"
               alt="мастер стрижет клиента"
               width="370"
               height="346"
             />
-            <h3 lang="en">John Smith</h3>
-            <p lang="en">ExtrTeme Barber</p>
+            <h3 class="employees-name" lang="en">John Smith</h3>
+            <p class="employees-position" lang="en">Extreme Barber</p>
           </li>
-          <li>
+          <li class="employees-card">
             <img
+              class="employees-photo"
               src="./images/employees/michele-doe.jpg"
               alt="мастер стрижет клиента"
               width="370"
               height="346"
             />
-            <h3 lang="en">Michele Doe</h3>
-            <p lang="en">Extreme Barber</p>
+            <h3 class="employees-name" lang="en">Michele Doe</h3>
+            <p class="employees-position" lang="en">Extreme Barber</p>
           </li>
-          <li>
+          <li class="employees-card">
             <img
+              class="employees-photo"
               src="./images/employees/alan-black.jpg"
               alt="мастер стрижет клиента"
               width="370"
               height="346"
             />
-            <h3 lang="en">Alan Black</h3>
-            <p lang="en">Extreme Barber</p>
+            <h3 class="employees-name" lang="en">Alan Black</h3>
+            <p class="employees-position" lang="en">Extreme Barber</p>
           </li>
         </ul>
       </section>
       <!-- GALLERY -->
-      <section>
-        <h2 hidden>Галерея работ</h2>
-        <p>На латинском языке “барба” означает “борода”</p>
-        <ul>
-          <li>
+      <section class="gallery">
+        <h2 hidden>галерея работ</h2>
+        <p class="suptitle suptitle-theme-light">На латинском языке “барба” означает “борода”</p>
+        <ul class="gallery-list list">
+          <li class="gallery-list-item">
             <img
+              class="gallery-list-img"
               src="./images/gallery/gallery-img-1.jpg"
               alt="мастер стрижет клиента"
               width="270"
               height="360"
             />
           </li>
-          <li>
+          <li class="gallery-list-item">
             <img
+              class="gallery-list-img"
               src="./images/gallery/gallery-img-2.jpg"
               alt="мастер бреет бороду клиенту"
               width="270"
               height="360"
             />
           </li>
-          <li>
+          <li class="gallery-list-item">
             <img
+              class="gallery-list-img"
               src="./images/gallery/gallery-img-3.jpg"
-              alt="мастер бреет бороду клиенту"
+              alt="мастер распаривает лицо клиенту"
               width="270"
               height="360"
             />
           </li>
-          <li>
+          <li class="gallery-list-item">
             <img
+              class="gallery-list-img"
               src="./images/gallery/gallery-img-4.jpg"
               alt="мастер стрижет клиента"
               width="270"
@@ -246,44 +257,46 @@
       </section>
       <div id="contacts">
         <!-- CONTACT FORM -->
-        <section>
-          <h2>Онлайн-запись</h2>
+        <section class="contact-form-section">
+          <h2 class="title">Онлайн-запись</h2>
         </section>
         <!-- CONTACT INFORMATION -->
-        <section>
-          <h2>Контакты</h2>
+        <section class="contact-info-section">
+          <h2 class="title">Контакты</h2>
           <address>
-            <ul>
-              <li>
+            <ul class="contact-list list">
+              <li class="contact-list-item">
                 <a
-                  href="https://goo.gl/maps/LRW6XYM6qvwiERGNA"
+                  class="contact-list-link link"
+                  href="https://goo.gl/maps/fSdhoyAyDwtJdrEC6"
                   target="_blank"
-                  rel="noopener noreferrer"
                   >ул. Васильковая, 7А Киев, 08132</a
                 >
               </li>
-              <li>
-                <a href="tel:+380441111111">+38 044 111 11 11</a>
+              <li class="contact-list-item">
+                <a class="contact-list-link link" href="tel:+380441111111">+38 044 111 11 11</a>
               </li>
-              <li>
-                <a href="mailto:barbershop@email.com">barbershop@email.com</a>
+              <li class="contact-list-item">
+                <a class="contact-list-link" href="mailto:barbershop@email.com"
+                  >barbershop@email.com</a
+                >
               </li>
             </ul>
           </address>
-          <h3>время работы</h3>
-          <p>Ежедневно с 9:00 до 22:00</p>
+          <h3 class="suptitle">время работы</h3>
+          <p class="contact-info-date">Ежедневно с 9:00 до 22:00</p>
         </section>
       </div>
     </main>
     <!-- FOOTER -->
-    <footer>
-      <p>&copy; Copyright 2020</p>
-      <ul class="media-list">
+    <footer class="footer">
+      <p class="copyright">&#xa9; Copyright 2020</p>
+      <ul class="media-list list">
         <li class="media-list-item">
-          <a class="media-list-link" href="" lang="en">Instagram</a>
+          <a class="media-list-link link" href="" lang="en">Instagram</a>
         </li>
         <li class="media-list-item">
-          <a class="media-list-link" href="" lang="en">Youtube</a>
+          <a class="media-list-link link" href="" lang="en">Youtube</a>
         </li>
       </ul>
     </footer>
