--- a/index.html
+++ b/index.html
@@ -49,134 +49,148 @@
     <main>
       <!-- HERO -->
       <section class="hero">
-        <div class="hero-left-side">
-          <ul class="media-list list">
-            <li class="media-list-item">
-              <a class="media-list-link link" href="" lang="en">Instagram</a>
-            </li>
-            <li class="media-list-item">
-              <a class="media-list-link link" href="" lang="en">Youtube</a>
-            </li>
-          </ul>
-        </div>
-        <div class="hero-right-side">
-          <p class="suptitle suptitle-theme-dark" lang="en">A hair salon for men in Kyiv</p>
-          <h1 class="main-title" lang="en">BarberShop</h1>
-          <p class="section-description section-description-theme-dark">
-            Мы эксперты в модных мужских стрижках. Работаем быстро, осторожно и со вкусом.
-          </p>
+        <div class="container hero-container">
+          <div class="hero-left-side">
+            <ul class="media-list list">
+              <li class="media-list-item">
+                <a class="media-list-link link" href="" lang="en">Instagram</a>
+              </li>
+              <li class="media-list-item">
+                <a class="media-list-link link" href="" lang="en">Youtube</a>
+              </li>
+            </ul>
+          </div>
+          <div class="hero-right-side">
+            <p class="suptitle suptitle-theme-dark" lang="en">A hair salon for men in Kyiv</p>
+            <h1 class="main-title" lang="en">BarberShop</h1>
+            <p class="section-description section-description-theme-dark hero-section-description">
+              Мы эксперты в модных мужских стрижках. Работаем быстро, осторожно и со вкусом.
+            </p>
+          </div>
         </div>
       </section>
       <!-- ABOUT -->
-      <section class="about container" id="about">
-        <div class="about-left-side">
-          <ul class="about-gallery list">
-            <li class="about-gallery-item">
-              <img
-                class="about-gallery-img"
-                src="./images/about/about-img-1.jpg"
-                alt="мастер бреет бороду"
-                width="270"
-                height="445"
-              />
-            </li>
-            <li class="about-gallery-item">
-              <img
-                class="about-gallery-img"
-                src="./images/about/about-img-2.jpg"
-                alt="мастер стрижет"
-                width="270"
-                height="445"
-              />
-            </li>
-          </ul>
-        </div>
-        <div class="about-right-side">
-          <h2 class="suptitle suptitle-theme-light">О НАС</h2>
-          <h3 class="title title-theme-light">Лучший Барбершоп твоего города</h3>
-          <p class="section-description section-description-theme-light">
-            Если ты хочешь добавить в свой образ больше уверенности – тебе точно к нам.
-          </p>
-          <p class="about-text">
-            Мы команда, которая никогда не останавливается на достигнутом и жаждет перемен. И когда
-            ты попадешь в руки нашего мастера, то уже никогда не сможешь быть прежним. Мы команда,
-            которая всегда с клиентами "на одной волне". Поэтому, мы всегда готовы усовершенствовать
-            каждого, кто к нам приходит!
-          </p>
-          <button class="modal-btn" type="button">онлайн-запись</button>
+      <section class="about section" id="about">
+        <div class="container about-container">
+          <div class="about-left-side">
+            <ul class="about-gallery list">
+              <li class="about-gallery-item">
+                <img
+                  class="about-gallery-img"
+                  src="./images/about/about-img-1.jpg"
+                  alt="мастер бреет бороду"
+                  width="270"
+                  height="445"
+                />
+              </li>
+              <li class="about-gallery-item">
+                <img
+                  class="about-gallery-img"
+                  src="./images/about/about-img-2.jpg"
+                  alt="мастер стрижет"
+                  width="270"
+                  height="445"
+                />
+              </li>
+            </ul>
+          </div>
+          <div class="about-right-side">
+            <h2 class="suptitle suptitle-theme-light">О НАС</h2>
+            <h3 class="title title-theme-light">Лучший Барбершоп твоего города</h3>
+            <p
+              class="section-description section-description-theme-light about-section-description"
+            >
+              Если ты хочешь добавить в свой образ больше уверенности – тебе точно к нам.
+            </p>
+            <p class="about-text">
+              Мы команда, которая никогда не останавливается на достигнутом и жаждет перемен. И
+              когда ты попадешь в руки нашего мастера, то уже никогда не сможешь быть прежним. Мы
+              команда, которая всегда с клиентами "на одной волне". Поэтому, мы всегда готовы
+              усовершенствовать каждого, кто к нам приходит!
+            </p>
+            <button class="modal-btn modal-btn-theme-light" type="button">онлайн-запись</button>
+          </div>
         </div>
       </section>
       <!-- SERVICES -->
       <section class="services section" id="services">
-        <p class="suptitle suptitle-theme-dark">Проведи время в компании лучших мастеров</p>
-        <h2 class="title">Услуги и цены</h2>
-        <table class="services-table list">
-          <tr class="services-table-row">
-            <td class="services-table-name">Мужская стрижка</td>
-            <td class="services-table-price">от 300 грн.</td>
-          </tr>
-          <tr class="services-table-row">
-            <td class="services-table-name">Стрижка бороды</td>
-            <td class="services-table-price">от 200 грн.</td>
-          </tr>
-          <tr class="services-table-row">
-            <td class="services-table-name">Стрижка усов</td>
-            <td class="services-table-price">от 200 грн.</td>
-          </tr>
-          <tr class="services-table-row">
-            <td class="services-table-name">Бритье опасной бритвой</td>
-            <td class="services-table-price">от 200 грн.</td>
-          </tr>
-        </table>
-        <table class="services-table list">
-          <tr class="services-table-row">
-            <td class="services-table-name">Cтрижка у стажера</td>
-            <td class="services-table-price">от 50 грн.</td>
-          </tr>
-          <tr class="services-table-row">
-            <td class="services-table-name">Стрижка под насадку</td>
-            <td class="services-table-price">от 200 грн.</td>
-          </tr>
-          <tr class="services-table-row">
-            <td class="services-table-name">Детская стрижка (до 12 лет)</td>
-            <td class="services-table-price">от 300 грн.</td>
-          </tr>
-          <tr class="services-table-row">
-            <td class="services-table-name">Камуфлирование седины</td>
-            <td class="services-table-price">от 200 грн.</td>
-          </tr>
-        </table>
-        <button class="modal-btn" type="button">онлайн-запись</button>
+        <div class="container">
+          <p class="suptitle suptitle-theme-dark">Проведи время в компании лучших мастеров</p>
+          <h2 class="title title-theme-dark">Услуги и цены</h2>
+          <div class="services-table-wrapper">
+            <table class="services-table list">
+              <tr class="services-table-row">
+                <td class="services-table-name">Мужская стрижка</td>
+                <td class="services-table-price">от 300 грн.</td>
+              </tr>
+              <tr class="services-table-row">
+                <td class="services-table-name">Стрижка бороды</td>
+                <td class="services-table-price">от 200 грн.</td>
+              </tr>
+              <tr class="services-table-row">
+                <td class="services-table-name">Стрижка усов</td>
+                <td class="services-table-price">от 200 грн.</td>
+              </tr>
+              <tr class="services-table-row">
+                <td class="services-table-name">Бритье опасной бритвой</td>
+                <td class="services-table-price">от 200 грн.</td>
+              </tr>
+            </table>
+            <table class="services-table list">
+              <tr class="services-table-row">
+                <td class="services-table-name">Cтрижка у стажера</td>
+                <td class="services-table-price">от 50 грн.</td>
+              </tr>
+              <tr class="services-table-row">
+                <td class="services-table-name">Стрижка под насадку</td>
+                <td class="services-table-price">от 200 грн.</td>
+              </tr>
+              <tr class="services-table-row">
+                <td class="services-table-name">Детская стрижка (до 12 лет)</td>
+                <td class="services-table-price">от 300 грн.</td>
+              </tr>
+              <tr class="services-table-row">
+                <td class="services-table-name">Камуфлирование седины</td>
+                <td class="services-table-price">от 200 грн.</td>
+              </tr>
+            </table>
+          </div>
+          <button class="modal-btn services-modal-btn" type="button">онлайн-запись</button>
+        </div>
       </section>
       <!-- ADVANTAGES -->
       <section class="advantages section">
-        <div class="advantages-left-side">
-          <ul class="advantages-list list">
-            <li class="advantages-list-item">
-              <p class="advantages-list-quantity">600</p>
-              <p class="advantages-list-description">Довольных клиентов в день</p>
-            </li>
-            <li class="advantages-list-item">
-              <p class="advantages-list-quantity">50</p>
-              <p class="advantages-list-description">Наград за отличный сервис</p>
-            </li>
-            <li class="advantages-list-item">
-              <p class="advantages-list-quantity">20</p>
-              <p class="advantages-list-description">Лучших мастеров Киева</p>
-            </li>
-            <li class="advantages-list-item">
-              <p class="advantages-list-quantity">100</p>
-              <p class="advantages-list-description">Подарков постоянным клиентам</p>
-            </li>
-          </ul>
-        </div>
-        <div class="advantages-right-side">
-          <p class="suptitle suptitle-theme-light">старая традиционная школа</p>
-          <h2 class="title title-theme-light">Почему приходят именно к нам?</h2>
-          <p class="section-description section-description-theme-light">
-            О нас говорят только хорошее. Но лучше 1 раз увидеть и прочувствовать, чем 10 раз
-            прочитать.
-          </p>
+        <div class="container advantages-container">
+          <div class="advantages-left-side">
+            <ul class="advantages-list list">
+              <li class="advantages-list-item">
+                <p class="advantages-list-quantity">600</p>
+                <p class="advantages-list-description">Довольных клиентов в день</p>
+              </li>
+              <li class="advantages-list-item">
+                <p class="advantages-list-quantity">50</p>
+                <p class="advantages-list-description">Наград за отличный сервис</p>
+              </li>
+              <li class="advantages-list-item">
+                <p class="advantages-list-quantity">20</p>
+                <p class="advantages-list-description">Лучших мастеров Киева</p>
+              </li>
+              <li class="advantages-list-item">
+                <p class="advantages-list-quantity">100</p>
+                <p class="advantages-list-description">Подарков постоянным клиентам</p>
+              </li>
+            </ul>
+          </div>
+          <div class="advantages-right-side">
+            <p class="suptitle suptitle-theme-light">старая традиционная школа</p>
+            <h2 class="title title-theme-light">Почему приходят именно к нам?</h2>
+            <p
+              class="section-description section-description-theme-light advantages-section-description"
+            >
+              О нас говорят только хорошее. Но лучше 1 раз увидеть и прочувствовать, чем 10 раз
+              прочитать.
+            </p>
+          </div>
         </div>
       </section>
       <!-- EMPLOYEES -->
@@ -228,47 +242,51 @@
         </div>
       </section>
       <!-- GALLERY -->
-      <section class="gallery">
-        <h2 hidden>галерея работ</h2>
-        <p class="suptitle suptitle-theme-light">На латинском языке “барба” означает “борода”</p>
-        <ul class="gallery-list list">
-          <li class="gallery-list-item">
-            <img
-              class="gallery-list-img"
-              src="./images/gallery/gallery-img-1.jpg"
-              alt="мастер стрижет клиента"
-              width="270"
-              height="360"
-            />
-          </li>
-          <li class="gallery-list-item">
-            <img
-              class="gallery-list-img"
-              src="./images/gallery/gallery-img-2.jpg"
-              alt="мастер бреет бороду клиенту"
-              width="270"
-              height="360"
-            />
-          </li>
-          <li class="gallery-list-item">
-            <img
-              class="gallery-list-img"
-              src="./images/gallery/gallery-img-3.jpg"
-              alt="мастер распаривает лицо клиенту"
-              width="270"
-              height="360"
-            />
-          </li>
-          <li class="gallery-list-item">
-            <img
-              class="gallery-list-img"
-              src="./images/gallery/gallery-img-4.jpg"
-              alt="мастер стрижет клиента"
-              width="270"
-              height="360"
-            />
-          </li>
-        </ul>
+      <section class="gallery section">
+        <div class="container">
+          <h2 hidden>галерея работ</h2>
+          <p class="suptitle suptitle-theme-light gallery-suptitle">
+            На латинском языке “барба” означает “борода”
+          </p>
+          <ul class="gallery-list list">
+            <li class="gallery-list-item">
+              <img
+                class="gallery-list-img"
+                src="./images/gallery/gallery-img-1.jpg"
+                alt="мастер стрижет клиента"
+                width="270"
+                height="360"
+              />
+            </li>
+            <li class="gallery-list-item">
+              <img
+                class="gallery-list-img"
+                src="./images/gallery/gallery-img-2.jpg"
+                alt="мастер бреет бороду клиенту"
+                width="270"
+                height="360"
+              />
+            </li>
+            <li class="gallery-list-item">
+              <img
+                class="gallery-list-img"
+                src="./images/gallery/gallery-img-3.jpg"
+                alt="мастер распаривает лицо клиенту"
+                width="270"
+                height="360"
+              />
+            </li>
+            <li class="gallery-list-item">
+              <img
+                class="gallery-list-img"
+                src="./images/gallery/gallery-img-4.jpg"
+                alt="мастер стрижет клиента"
+                width="270"
+                height="360"
+              />
+            </li>
+          </ul>
+        </div>
       </section>
       <div id="contacts">
         <!-- CONTACT FORM -->
@@ -305,15 +323,17 @@
     </main>
     <!-- FOOTER -->
     <footer class="footer">
-      <p class="copyright">&#xa9; Copyright 2020</p>
-      <ul class="media-list list">
-        <li class="media-list-item">
-          <a class="media-list-link link" href="" lang="en">Instagram</a>
-        </li>
-        <li class="media-list-item">
-          <a class="media-list-link link" href="" lang="en">Youtube</a>
-        </li>
-      </ul>
+      <div class="container footer-container">
+        <p class="copyright">&#xa9; Copyright 2020</p>
+        <ul class="media-list list">
+          <li class="media-list-item">
+            <a class="media-list-link link" href="" lang="en">Instagram</a>
+          </li>
+          <li class="media-list-item">
+            <a class="media-list-link link" href="" lang="en">Youtube</a>
+          </li>
+        </ul>
+      </div>
     </footer>
   </body>
 </html>
