--- a/svg.html
+++ b/svg.html
@@ -20,13 +20,25 @@
       <div class="container">
         <ul class="social-list list">
           <li class="social-list__item">
-            <a href="#" class="social-list__item-link social-list__item-link_facebook"> </a>
+            <a href="#" class="social-list__item-link social-list__item-link_facebook">
+              <svg class="social-list__icon" width="32" height="32">
+                <use href="./images/sprite.svg#facebook"></use>
+              </svg>
+            </a>
           </li>
           <li class="social-list__item">
-            <a href="#" class="social-list__item-link social-list__item-link_twitter"> </a>
+            <a href="#" class="social-list__item-link social-list__item-link_twitter">
+              <svg class="social-list__icon" width="32" height="32">
+                <use href="./images/sprite.svg#twitter"></use>
+              </svg>
+            </a>
           </li>
           <li class="social-list__item">
-            <a href="#" class="social-list__item-link social-list__item-link_telegram"> </a>
+            <a href="#" class="social-list__item-link social-list__item-link_telegram">
+              <svg class="social-list__icon" width="32" height="32">
+                <use href="./images/sprite.svg#telegram"></use>
+              </svg>
+            </a>
           </li>
         </ul>
       </div>
